<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">Health Android Example</string>

  <string name="new_result">New Result</string>
  <string name="refresh_results">Refresh Results</string>
  <string name="choose_account">Choose Account</string>
  <string name="choose_profile">Choose Profile</string>

  <string name="save">Save</string>
  <string name="cancel">Cancel</string>

  <string name="add_result_title">Add Result</string>
  <string name="resultTypeLabelText">Type</string>
  <string name="resultValueLabelText">Value</string>
  <string name="resultDateLabelText">Date</string>
  <string name="resultUnitsLabelText">units</string>

  <!-- Google account selection -->
  <string name="no_account_found_title">No Account Found</string>
  <string name="no_account_found">No account found on device for connecting to
    Google services.</string>
  <string name="choose_account_title">Choose Account</string>

  <!-- Common -->
  <string name="ok">OK</string>

  <!-- Dashboard -->
  <string name="main_account">Account</string>
  <string name="main_profile">Profile</string>

  <!-- Progress dialog text -->
  <string name="loading">Loading... Please wait.</string>

  <!-- Terms dialog text -->
  <string name="health_notice">If you have not yet enabled your Google Health
    account, any data uploaded by this application will be held at
    Google until you do so. To enable your account and view your data,
    just go to https://health.google.com and sign in.</string>
</resources>
